# stella-gc

./: CMakeLists.txt  README.md  main.c  run_tests.sh
.github/workflows/: build.yml  tests.yml
stella/: gc.c  gc.h
